# SDLIntro

./: CMakeLists.txt  CMakePresets.json  main.cpp
source/: Application.cpp  Application.hpp
source/ObjectComponent/: ObjectComponent.cpp  ObjectComponent.hpp
source/Rendering/SpriteSheetRenderComponent/: SpriteSheetRenderComponent.cpp  SpriteSheetRenderComponent.hpp
source/Utils/Types/: Vector2D  Vector2D.cpp
